Replaces settings lists by textareas
Current list elements for menu and submenus aren't practical when you want to modify or reorder them.
I replace them by textareas.

I also replace the "gallery" default example icon which didn't work anymore for some reason.

--- a/common/header.html
+++ b/common/header.html
@@ -36,8 +36,8 @@ const { iconHTML } = require("discourse-common/lib/icon-library"),
     ? iconHTML("caret-down", { class: "header-menu-caret" })
     : "";
 
-let sec = $.map(settings.Menu_items.split("|"), $.trim),
-  seg = $.map(settings.Submenu_items.split("|"), $.trim),
+let sec = $.map(settings.Menu_items.trim().split(/\n|\|/), $.trim),
+  seg = $.map(settings.Submenu_items.trim().split(/\n|\|/), $.trim),
   rawMain = "",
   mainUl = "";
 
